<resources>
    <string name="username_hint">Your user name goes here</string>
    <string name="password_hint">Your password goes here</string>
    <string name="save_credentials">Remember credentials</string>
    <string name="action_authenticate">Authenticate</string>
    <string name="error_invalid_credentials">Invalid Credentials</string>

    <string name="app_name">tareco</string>
    <string name="dialogTitle">Lançar os cães!</string>
    <string name="dialogMessage">Lançar os cães pode trazer complicações</string>
    <string name="snackbar_message">Que cão tão bonito!</string>
    <string name="snackbar_action_thanks">Obrigadinho!</string>
    <string name="snackbar_action_thanks_selected">snackbar_action_thanks_selected</string>
    <string name="tv_username">username</string>
    <string name="bt_details">Details</string>
    <string name="bt_alert">Alert</string>
    <string name="bt_snackbar">SnackBar</string>
    <string name="bt_start_timer">start timer</string>
    <string name="iv_main_image">Main Image</string>
</resources>